Fixed ScrollBar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,16 @@ body {
     color: white;
 }
 
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgb(146, 146, 146); 
+  }
+  
 /* SIDEBAR LEFT */
 
 ul li {
@@ -71,7 +81,7 @@ ul li {
     padding: 0.3em;
 }
 
-#mainContainer {
+#mainContainer, #leftSidebar {
     overflow: scroll;
     scroll-behavior: smooth;
 }
